js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-call-unknown.js
DONOTEVALUATE
(
)
;
do
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
while
(
false
)
;
